fix cutoff problem

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h3{
 .m {
   float:left;
   width: 80%;
-  text-align: center;
+  /* text-align: center; */
   display: inline-block;
 
 }
@@ -22,8 +22,9 @@ h3{
 .container {
   /* border-radius: 20px; */
   background-color: #8e805f;
-  height: 700;
-  width: 800;
+  height: 900;
+  width: 1100;
+  text-align: center;
 }
 
 .chart {
@@ -36,13 +37,14 @@ h3{
 [id^="slider"] {
   float: left;
   height: 100;
-  width: 180;
+  width: 200;
   text-align: center;
   margin-top: -15;
+  margin-left: -30%;
 }
 [id^="year"] {
   margin-top: 50;
-  margin-left: -180;
+  margin-left: -60%;
   float: left;
 }
 [id^="label"] {
